# game-of-life

./: .gitignore  pyproject.toml
gameOfLife/: __main__.py  cli.py  grid.py  patterns.py  views.py
