[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gameOfLife"
dynamic = ["version"]
description = "Conway's Game of Life in your terminal"
readme = "README.md"
authors = [{ name = "Nate Ledrich", email = "nathanael.ledrich@icloud.com" }]
dependencies = [
    'tomli; python_version < "3.11"',
]

[project.scripts]
gameOfLife = "gameOfLife.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "gameOfLife.__version__" }